--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cached_network_image: ^3.3.1
   
   flutter_local_notifications: ^17.2.1+2
+  timezone: ^0.9.4
   
   shared_preferences: ^2.2.3
   
@@ -55,6 +56,11 @@ dependencies:
   
   flutter_spinkit: ^5.2.1
   lottie: ^3.1.2
+  url_launcher: ^6.3.0
+  
+  # Nepali calendar support
+  nepali_utils: ^3.0.5
+  nepali_date_picker: ^6.0.2
 
 dev_dependencies:
   flutter_test:
