--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,8 +87,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/wel.jpeg  
-    - admin_config.json
-    - user_config.json
+    # - admin_config.json
+    # - user_config.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
